# typer-cli

./: .coveragerc  .gitignore  .travis.yml  README.md  mypy.ini  pyproject.toml  release-notes.md  requirements.txt
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: issue-manager.yml  latest-changes.yml  publish.yml  test.yml
scripts/: format-imports.sh  format.sh  lint.sh  test.sh
tests/: test_app_other_name.py  test_completion_run.py  test_doc.py  test_empty_script.py  test_func_other_name.py  test_help.py  test_multi_app.py  test_multi_app_cli.py  test_multi_app_sub.py  test_multi_func.py  test_not_python.py  test_sub.py  test_sub_completion.py  test_sub_help.py  test_version.py
tests/assets/: multi_app.py  multi_func.py  multiapp-docs.md
typer_cli/: __init__.py  main.py
