[tool.poetry]
name = "typer-cli"
version = "0.0.5"
description = "Run Typer scripts with completion, without having to create a package, using Typer CLI."
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/tiangolo/typer"
repository = "https://github.com/tiangolo/typer"
documentation = "https://typer.tiangolo.com"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.6"
importlib_metadata = "^1.5"
typer = "^0.0.9"
click-completion = "^0.5.2"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^4.4.0"
black = {version = "^19.10b0", allow-prereleases = true}
pytest-cov = "^2.8.1"
pytest-xdist = "^1.31.0"
pytest-sugar = "^0.9.2"
mypy = "^0.761"
flake8 = "^3.7.9"
isort = "^4.3.21"
autoflake = "^1.3.1"

[tool.poetry.scripts]
typer = "typer_cli.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
